Ready For Deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,6 @@ CLIPDROP_API_KEY=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# ======================= MODE ========================== #
+NODE_ENV=
