--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,6 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "openai": "^6.9.1",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "1.1.1"
   }
 }
